--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     environment:
       - DOTNET_CLI_TELEMETRY_OPTOUT: true
       - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+      - TERM: dumb
 
     working_directory: ~/circleci-entityframework
 
