--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - run:
           name: Install missing packages
-          command: apt update && apt install -y git ssh-client uuid-runtime wget unzip libunwind-dev libssl-dev libicu-dev
+          command: apt update && apt install -y git openssh-client uuid-runtime wget unzip libunwind8-dev libssl-dev libicu-dev
       - checkout
       - run:
           name: Run tests
