--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,22 @@ jobs:
   build:
     docker:
       - image: microsoft/dotnet:2.0-sdk
+      - image: microsoft/mssql-server-linux:latest
+        environment:
+          ACCEPT_EULA: 'Y'
+          SA_PASSWORD: Bjknxu6wpbbCA9mA
+        command: /opt/mssql/bin/sqlservr.sh
 
     environment:
       - DOTNET_CLI_TELEMETRY_OPTOUT: true
       - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-      - TERM: dumb
 
     working_directory: ~/circleci-entityframework
 
     steps:
       - run:
-          name: Install missing packages
-          command: apt update && apt install -y git openssh-client
+         name: Waiting for SQL Server to launch
+         command: timeout 180 bash -c 'until { </dev/tcp/localhost/1433; } 2>/dev/null; do echo -n "."; sleep 0.5; done'
       - checkout
       - run:
           name: Restore
