--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
         environment:
           ACCEPT_EULA: 'Y'
           SA_PASSWORD: Bjknxu6wpbbCA9mA
-        command: /opt/mssql/bin/sqlservr.sh
+        command: /opt/mssql/bin/sqlservr
 
     environment:
       - DOTNET_CLI_TELEMETRY_OPTOUT: true
